--- a/.dotfiles/mac/Brewfile
+++ b/.dotfiles/mac/Brewfile
@@ -7,7 +7,7 @@ brew "github-keygen"
 # brew "gnupg"
 # brew "pinentry-mac"
 # brew "stow"
-# brew "mas"
+brew "mas"
 brew "gh"
 # cask "atom"
 # cask "carbon-copy-cloner"cask "atom"
