--- a/.private/mac/Brewfile
+++ b/.private/mac/Brewfile
@@ -17,6 +17,9 @@ brew "node"
 # cask
 cask "visual-studio-code"
 cask "alacritty"
+cask "warp"
+cask "firefox"
+cask "google-chrome"
 
 # mas
 mas "iMovie", id: 408981434
